# latticefold

./: .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.githooks/: pre-push
.github/workflows/: linter.yml  typos.toml
crates/cyclotomic-rings/: Cargo.toml
crates/latticefold/: Cargo.toml  build.rs
crates/latticefold-plus/: Cargo.toml  README.md
crates/latticefold-plus/src/: cm.rs  plus.rs  r1cs.rs  setchk.rs  transcript.rs
crates/latticefold/benches/: config.toml  env.rs  utils.rs
crates/latticefold/examples/: README.md  e2e.rs
crates/latticefold/src/: arith.rs  nifs.rs  transcript.rs
crates/latticefold/src/arith/: ccs.rs  r1cs.rs  utils.rs
crates/latticefold/src/commitment/: commitment_scheme.rs  homomorphic_commitment.rs  operations.rs
crates/latticefold/src/nifs/: decomposition.rs  folding.rs  linearization.rs  tests.rs
crates/latticefold/src/nifs/decomposition/: structs.rs
crates/latticefold/src/nifs/decomposition/tests/: mod.rs
crates/latticefold/src/nifs/folding/: structs.rs  utils.rs
crates/latticefold/src/nifs/folding/tests/: mod.rs
crates/latticefold/src/nifs/linearization/tests/: mod.rs
crates/latticefold/src/utils/sumcheck/: verifier.rs
latticefold/: build.rs
latticefold-plus/: Cargo.toml
latticefold-plus/benches/: double_commitment.rs  e2e.rs
latticefold-plus/src/: cm.rs  decomp.rs  lib.rs  lin.rs  mlin.rs  plus.rs  rgchk.rs  setchk.rs
latticefold/examples/: README.md
latticefold/src/: arith.rs
latticefold/src/arith/: error.rs  r1cs.rs
latticefold/src/nifs/: decomposition.rs
latticefold/src/nifs/decomposition/: utils.rs
latticefold/src/nifs/decomposition/tests/: mod.rs
latticefold/src/transcript/: poseidon.rs
